# SkillOps-Runtime

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: v0-acceptance.md
loops/: coding-pr-gate-agent.yaml  coding-pr-gate.yaml  self-improve.yaml  stacked-child.yaml  stacked-parent.yaml
loops/examples/: improve-target.yaml  improve-task.md
skillops/: __init__.py  __main__.py  agents.py  cli.py  evaluator.py  gitsafety.py  governor.py  promotion.py  runtime.py  schemas.py  steps.py  store.py  terminal.py  verifier.py
skills/coding-pr-gate/: skill.yaml
tests/: conftest.py  test_agent_execute.py  test_cli.py  test_gates.py  test_governor.py  test_persistence_and_run.py  test_promotion.py  test_release_path.py  test_resume_replay.py  test_schemas.py  test_self_improve.py  test_skill_promote.py  test_stacked_loops.py
