[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillops"
version = "0.1.0"
description = "SkillOps LoopStack v0 - a checkpointed loop kernel for verifier-owned, PR-gated coding-agent delivery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["PyYAML>=5.4"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
skillops = "skillops.cli:main"

[tool.setuptools.packages.find]
include = ["skillops*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
